Edit for display issue on mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3103,6 +3103,10 @@ input, select, textarea {
 
 	@media screen and (max-width: 736px) {
 
+		.hide-on-mobile {
+			display: none !important;
+		}
+
 		/* Basic */
 
 			h2 {
